--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "koa-router": "^7.4.0"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
     "mocha": "^6.2.0",
     "sinon": "^7.4.2"
   },
