- added google maps lib - calculating distance between locations - added env configuration

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Find close-by locations",
   "main": "app.js",
   "dependencies": {
+    "@google/maps": "^1.0.0",
+    "dotenv": "^8.1.0",
     "koa": "^2.8.1",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
