--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@google/maps": "^1.0.0",
     "dotenv": "^8.1.0",
+    "joi": "^14.3.1",
     "koa": "^2.8.1",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
