--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "scripts": {
     "test": "./node_modules/.bin/mocha --exit --recursive test/",
-    "start": "node app"
+    "start": "node app",
+    "build": "npm i && npm start"
   },
   "repository": {
     "type": "git",
